--- a/kyle_hovey_resume.tex
+++ b/kyle_hovey_resume.tex
@@ -1,6 +1,6 @@
 %-------------------------
 % Resume in Latex
-% Author : Sourabh Bajaj
+% Author : Kyle Hovey
 % Template Creator : Sourabh Bajaj
 % License : MIT
 %------------------------
@@ -97,6 +97,28 @@
   \resumeSubHeadingListStart
 
     \resumeSubheading
+      {USU Power Electronics Laboratory}{Logan, UT}
+      {Software Engineer / Research Assistant}{Jan 2016 - Present}
+      \resumeItemListStart
+        \resumeItem{CAN Data Graphing Utility}
+        {As a part of the AMPED project (geared towards extending battery life with smarter cycling) we accrued Terabytes of sensor data that needed to be visualized. I created a HTML5 asynchronous web-app for generating and sharing graphs of this data.}
+      \resumeItem{Square One - Altium Library Management System}
+        {I created a system for mass-submitting tickets for new parts to be added to our in-house Altium Database and verified by librarians. This system integrates with OctoPart and support auto-filling of data and will support BOM upload and automated price-minimizing order-form generation.}
+      \resumeItem{Graphic Design}
+        {I designed all the banners and window decals around our facilities in Logan, UT. In the process, I utilize a unified color palette for all the facets of our organization.}
+      \resumeItem{Web Development}
+        {I created the first revision of the SELECT website, which utilized a responsive single-page design and aesthetic harmony of data presented therein. The current website is not my doing, however.}
+      \resumeItemListEnd
+
+    \resumeSubheading
+      {USU GASLab}{Logan, UT}
+      {Software Engineer}{Apr 2017 - Present}
+      \resumeItemListStart
+      \resumeItem{Cubium Software Project}
+      {I am in the software team of the Get-Away-Special small-satellite program at Utah State University. We continue to develop open source subscription-based plug and play software for small satellite application as well as develop new hardware that will empower individuals to deploy experiments on a budget.}
+      \resumeItemListEnd
+
+    \resumeSubheading
       {West Coast Astronomical Society}{Santa Margarita, CA}
       {Head of Mechatronics}{Jun 2014 - Jan 2015}
       \resumeItemListStart
@@ -104,6 +126,25 @@
         {I was in charge of automating the hardware of a Meade 10`` telescope with the intention of streamlining the process of speckle interferometry to more accurately detect the positions of binary star systems. I implemented new affordable tech that will enable more people to observe countless binary+ star systems.}
       \resumeItemListEnd
 
+    \resumeSubheading
+      {Cuesta College}{San Luis Obispo, CA}
+      {Tutor}{Aug. 2014 -- May. 2015}
+      \resumeItemListStart
+      \resumeItem{Math / Physics Tutor}
+        {At Cuesta College I tutored all levels of mathematics and frequently had teachers send students to me so that I could explain new concepts.}
+      \resumeItemListEnd
+
+  \resumeSubHeadingListEnd
+
+%-----------ACHIEVEMENTS-----------------
+\section{Achievements}
+  \resumeSubHeadingListStart
+    \resumeSubItem{USU Hackathon - 1st Place}
+    {I took first place at the Utah State University intercollegiate hackathon for my solo development work on a procedurally generated terrain-based music visualizer entitled ``Acoustic Forest``.}
+    \resumeSubItem{USU - Deans List}
+    {I am a current member of the Dean's List at Utah State University.}
+    \resumeSubItem{Cuesta College - FBSA}
+    {I was awarded the Frank Brown Science Award for outstanding academic achievement.}
   \resumeSubHeadingListEnd
 
 
@@ -111,13 +152,13 @@
 \section{Projects}
   \resumeSubHeadingListStart
     \resumeSubItem{8 Bit Spaghetti}
-    {8-bit processor that I designed and built using TTL. I have now helped many students around the world build versions of my design.}
+      {8-bit processor that I designed and built using TTL. I have now helped many students around the world build versions of my design.}
+    \resumeSubItem{Dream Cloak LED Display}
+    {In five days I designed and built a 15x30 24-bit wearable RGB LED display and a web app to control it wirelessly.}
     \resumeSubItem{Euler Golf}
-      {HTML5 game based on a problem I concieved involving recursive movement over the Gaussian Integers.}
+      {HTML5 game based on a problem I conceived involving recursive movement over the Gaussian Integers.}
     \resumeSubItem{CALSim}
       {In-browser WireWorld cellular automaton interpreter with built in key-commands.}
-    \resumeSubItem{Acoustic Forest}
-      {Procedurally generated terrain-based music visualizer built in 30 hours that achieved first place in the USU intercollegiate Hackathon.}
   \resumeSubHeadingListEnd
 
 
@@ -125,9 +166,9 @@
 \section{Programming Skills}
   \resumeSubHeadingListStart
     \item{
-      \textbf{Languages}{: JS, C++, Python, Bash, Java, PHP, Haskell}
+        \textbf{Languages}{: JS, C++, Python, Bash, Java, PHP, LaTeX}
       \hfill
-      \textbf{Technologies}{: AWS, jQuery, lodash, Node.js}
+      \textbf{Technologies}{: jQuery, lodash, Node.js, Vim}
     }
   \resumeSubHeadingListEnd
 
