--- a/kyle_hovey_resume.tex
+++ b/kyle_hovey_resume.tex
@@ -105,7 +105,7 @@
       \resumeItem{Square One - Altium Library Management System}
         {I created a system for mass-submitting tickets for new parts to be added to our in-house Altium Database and verified by librarians. This system integrates with OctoPart and support auto-filling of data and will support BOM upload and automated price-minimizing order-form generation.}
       \resumeItem{Graphic Design}
-        {I designed all the banners and window decals around our facilities in Logan, UT. In the process, I utilize a unified color palette for all the facets of our organization.}
+      {I designed all the banners and window decals around our facilities in Logan, UT. In the process, I utilized a unified color palette for all the facets of our organization.}
       \resumeItem{Web Development}
         {I created the first revision of the SELECT website, which utilized a responsive single-page design and aesthetic harmony of data presented therein. The current website is not my doing, however.}
       \resumeItemListEnd
