--- a/kyle_hovey_resume.tex
+++ b/kyle_hovey_resume.tex
@@ -107,7 +107,7 @@
       \resumeItem{Graphic Design}
       {I designed all the banners and window decals around our facilities in Logan, UT. In the process, I utilized a unified color palette for all the facets of our organization.}
       \resumeItem{Web Development}
-        {I created the first revision of the SELECT website, which utilized a responsive single-page design and aesthetic harmony of data presented therein. The current website is not my doing, however.}
+        {I created the first revision of the SELECT website, which utilized a responsive single-page design and aesthetic harmony of data presented therein.}
       \resumeItemListEnd
 
     \resumeSubheading
