Updated resume and preview.

--- a/kyle_hovey_resume.tex
+++ b/kyle_hovey_resume.tex
@@ -139,11 +139,11 @@
 %-----------ACHIEVEMENTS-----------------
 \section{Achievements}
   \resumeSubHeadingListStart
-    \resumeSubItem{USU Hackathon - 1st Place}
-    {I took first place at the Utah State University intercollegiate hackathon for my solo development work on a procedurally generated terrain-based music visualizer entitled ``Acoustic Forest``.}
-    \resumeSubItem{USU - Deans List}
+  \resumeSubItem{USU Hackathon (2016)}
+    {I took first place at the Utah State University intercollegiate hackathon for my solo development work on a procedurally generated terrain-based music visualizer entitled ``Acoustic Forest''.}
+    \resumeSubItem{USU Deans List (2017)}
     {I am a current member of the Dean's List at Utah State University.}
-    \resumeSubItem{Cuesta College - FBSA}
+    \resumeSubItem{Cuesta College FBSA (2015)}
     {I was awarded the Frank Brown Science Award for outstanding academic achievement.}
   \resumeSubHeadingListEnd
 
@@ -157,8 +157,6 @@
     {In five days I designed and built a 15x30 24-bit wearable RGB LED display and a web app to control it wirelessly.}
     \resumeSubItem{Euler Golf}
       {HTML5 game based on a problem I conceived involving recursive movement over the Gaussian Integers.}
-    \resumeSubItem{CALSim}
-      {In-browser WireWorld cellular automaton interpreter with built in key-commands.}
   \resumeSubHeadingListEnd
 
 
