--- a/kyle_hovey_resume.tex
+++ b/kyle_hovey_resume.tex
@@ -7,6 +7,8 @@
 
 \documentclass[letterpaper,11pt]{article}
 
+\renewcommand{\familydefault}{\sfdefault}
+
 \usepackage{latexsym}
 \usepackage[empty]{fullpage}
 \usepackage{titlesec}
@@ -101,21 +103,21 @@
       {Software Engineer / Research Assistant}{Jan 2016 - Present}
       \resumeItemListStart
         \resumeItem{CAN Data Graphing Utility}
-        {As a part of the AMPED project (geared towards extending battery life with smarter cycling) we accrued Terabytes of sensor data that needed to be visualized. I created a HTML5 asynchronous web-app for generating and sharing graphs of this data.}
+        {Created an HTML5 asynchronous web-app for generating and sharing graphs of terabytes of data accrued in the AMPED battery life extension project.}
       \resumeItem{Square One - Altium Library Management System}
-        {I created a system for mass-submitting tickets for new parts to be added to our in-house Altium Database and verified by librarians. This system integrates with OctoPart and support auto-filling of data and will support BOM upload and automated price-minimizing order-form generation.}
+        {Created a system for mass-submitting tickets for new parts to be added to our in-house Altium Database and verified by librarians. This system integrates with OctoPart and support auto-filling of data and will support BOM upload and automated price-minimizing order-form generation.}
       \resumeItem{Graphic Design}
-      {I designed all the banners and window decals around our facilities in Logan, UT. In the process, I utilized a unified color palette for all the facets of our organization.}
+        {Designed all the banners and window decals around our facilities in Logan, UT. Utilized a unified color palette for all the facets of our organization.}
       \resumeItem{Web Development}
-        {I created the first revision of the SELECT website, which utilized a responsive single-page design and aesthetic harmony of data presented therein.}
+        {Created the first revision of the SELECT website, which utilized a responsive single-page design and aesthetic harmony of data presented therein.}
       \resumeItemListEnd
 
     \resumeSubheading
       {USU GASLab}{Logan, UT}
-      {Software Engineer}{Apr 2017 - Present}
+      {Volunteer Software Engineer}{Apr 2017 - Present}
       \resumeItemListStart
       \resumeItem{Cubium Software Project}
-      {I am in the software team of the Get-Away-Special small-satellite program at Utah State University. We continue to develop open source subscription-based plug and play software for small satellite application as well as develop new hardware that will empower individuals to deploy experiments on a budget.}
+      {A volunteer of the Get-Away-Special small-satellite program at Utah State University. Develops open source subscription-based plug and play software for small satellite application as well as new hardware that will empower individuals to deploy experiments on a budget.}
       \resumeItemListEnd
 
     \resumeSubheading
@@ -123,7 +125,7 @@
       {Head of Mechatronics}{Jun 2014 - Jan 2015}
       \resumeItemListStart
         \resumeItem{Telescope Automation}
-        {I was in charge of automating the hardware of a Meade 10`` telescope with the intention of streamlining the process of speckle interferometry to more accurately detect the positions of binary star systems. I implemented new affordable tech that will enable more people to observe countless binary+ star systems.}
+        {Took charge of automating the hardware of a Meade 10`` telescope to streamline the process of speckle interferometry and more accurately detect the positions of binary star systems. Implemented new affordable tech that will enable more people to observe countless binary+ star systems.}
       \resumeItemListEnd
 
     \resumeSubheading
@@ -131,7 +133,7 @@
       {Tutor}{Aug. 2014 -- May. 2015}
       \resumeItemListStart
       \resumeItem{Math / Physics Tutor}
-        {At Cuesta College I tutored all levels of mathematics and frequently had teachers send students to me so that I could explain new concepts.}
+        {Tutored all levels of mathematics. Teachers frequently sent students to me so that I could explain new concepts to them.}
       \resumeItemListEnd
 
   \resumeSubHeadingListEnd
@@ -140,11 +142,11 @@
 \section{Achievements}
   \resumeSubHeadingListStart
   \resumeSubItem{USU Hackathon (2016)}
-    {I took first place at the Utah State University intercollegiate hackathon for my solo development work on a procedurally generated terrain-based music visualizer entitled ``Acoustic Forest''.}
+    {Took first place at the Utah State University intercollegiate hackathon for my solo development work on a procedurally generated terrain-based music visualizer entitled ``Acoustic Forest''.}
     \resumeSubItem{USU Deans List (2017)}
-    {I am a current member of the Dean's List at Utah State University.}
+    {Current member of the Dean's List at Utah State University.}
     \resumeSubItem{Cuesta College FBSA (2015)}
-    {I was awarded the Frank Brown Science Award for outstanding academic achievement.}
+    {Awarded the Frank Brown Science Award for outstanding academic achievement.}
   \resumeSubHeadingListEnd
 
 
@@ -152,11 +154,11 @@
 \section{Projects}
   \resumeSubHeadingListStart
     \resumeSubItem{8 Bit Spaghetti}
-      {8-bit processor that I designed and built using TTL. I have now helped many students around the world build versions of my design.}
+      {Desined and built 8-bit processor using TTL. Helped many students around the world build versions of the design.}
     \resumeSubItem{Dream Cloak LED Display}
-    {In five days I designed and built a 15x30 24-bit wearable RGB LED display and a web app to control it wirelessly.}
+      {Designed and built a 15x30 24-bit wearable RGB LED display and a web app to control it wirelessly, all in five days.}
     \resumeSubItem{Euler Golf}
-      {HTML5 game based on a problem I conceived involving recursive movement over the Gaussian Integers.}
+      {Created an HTML5 game based on a problem conceived involving recursive movement over the Gaussian Integers.}
   \resumeSubHeadingListEnd
 
 
@@ -164,9 +166,9 @@
 \section{Programming Skills}
   \resumeSubHeadingListStart
     \item{
-        \textbf{Languages}{: JS, C++, Python, Bash, Java, PHP, LaTeX}
+        \textbf{Languages}{: JS, C++, Python, Bash, Java, PHP, Haskell, LaTeX}
       \hfill
-      \textbf{Technologies}{: jQuery, lodash, Node.js, Vim}
+      \textbf{Technologies}{: jQuery, lodash, Node.js, Canvas}
     }
   \resumeSubHeadingListEnd
 
