--- a/kyle_hovey_resume.tex
+++ b/kyle_hovey_resume.tex
@@ -154,7 +154,7 @@
 \section{Projects}
   \resumeSubHeadingListStart
     \resumeSubItem{8 Bit Spaghetti}
-      {Desined and built 8-bit processor using TTL. Helped many students around the world build versions of the design.}
+      {Designed and built 8-bit processor using TTL. Helped many students around the world build versions of the design.}
     \resumeSubItem{Dream Cloak LED Display}
       {Designed and built a 15x30 24-bit wearable RGB LED display and a web app to control it wirelessly, all in five days.}
     \resumeSubItem{Euler Golf}
