--- a/kyle_hovey_resume.tex
+++ b/kyle_hovey_resume.tex
@@ -105,7 +105,7 @@
         \resumeItem{CAN Data Graphing Utility}
         {Created an HTML5 asynchronous web-app for generating and sharing graphs of terabytes of data accrued in the AMPED battery life extension project.}
       \resumeItem{Square One - Altium Library Management System}
-        {Created a system for mass-submitting tickets for new parts to be added to our in-house Altium Database and verified by librarians. This system integrates with OctoPart and support auto-filling of data and will support BOM upload and automated price-minimizing order-form generation.}
+      {Created a system for mass-submitting tickets for new parts to be added to our in-house Altium Database and verified by librarians. This system integrates with OctoPart and supports auto-filling of data and will support BOM upload and automated price-minimizing order-form generation.}
       \resumeItem{Graphic Design}
         {Designed all the banners and window decals around our facilities in Logan, UT. Utilized a unified color palette for all the facets of our organization.}
       \resumeItem{Web Development}
