--- a/kyle_hovey_resume.tex
+++ b/kyle_hovey_resume.tex
@@ -102,10 +102,10 @@
       {USU Power Electronics Laboratory}{Logan, UT}
       {Software Engineer / Research Assistant}{Jan 2016 - Present}
       \resumeItemListStart
+        \resumeItem{Square One - Altium Library Management System}
+        {Created a system using Node+Express for mass-submitting tickets for new parts to be added to our in-house Altium Database and verified by librarians. This system integrates with OctoPart and supports auto-filling of data and will support automated price-minimizing order-form generation.}
         \resumeItem{CAN Data Graphing Utility}
         {Created an HTML5 asynchronous web-app for generating and sharing graphs of terabytes of data accrued in the AMPED battery life extension project.}
-      \resumeItem{Square One - Altium Library Management System}
-      {Created a system for mass-submitting tickets for new parts to be added to our in-house Altium Database and verified by librarians. This system integrates with OctoPart and supports auto-filling of data and will support BOM upload and automated price-minimizing order-form generation.}
       \resumeItem{Graphic Design}
         {Designed all the banners and window decals around our facilities in Logan, UT. Utilized a unified color palette for all the facets of our organization.}
       \resumeItem{Web Development}
@@ -168,7 +168,7 @@
     \item{
         \textbf{Languages}{: JS, C++, Python, Bash, Java, PHP, Haskell, LaTeX}
       \hfill
-      \textbf{Technologies}{: jQuery, lodash, Node.js, Canvas}
+        \textbf{Technologies}{: Node.js, Express, jQuery, Babel}
     }
   \resumeSubHeadingListEnd
 
