Fixed plus symbols.

--- a/kyle_hovey_resume.tex
+++ b/kyle_hovey_resume.tex
@@ -103,7 +103,7 @@
       {Software Engineer / Research Assistant}{Jan 2016 - Present}
       \resumeItemListStart
         \resumeItem{Square One - Altium Library Management System}
-        {Created a system using Node+Express for mass-submitting tickets for new parts to be added to our in-house Altium Database and verified by librarians. This system integrates with OctoPart and supports auto-filling of data and will support automated price-minimizing order-form generation.}
+        {Created a system using Node$+$Express for mass-submitting tickets for new parts to be added to our in-house Altium Database and verified by librarians. This system integrates with OctoPart and supports auto-filling of data and will support automated price-minimizing order-form generation.}
         \resumeItem{CAN Data Graphing Utility}
         {Created an HTML5 asynchronous web-app for generating and sharing graphs of terabytes of data accrued in the AMPED battery life extension project.}
       \resumeItem{Graphic Design}
@@ -125,7 +125,7 @@
       {Head of Mechatronics}{Jun 2014 - Jan 2015}
       \resumeItemListStart
         \resumeItem{Telescope Automation}
-        {Took charge of automating the hardware of a Meade 10`` telescope to streamline the process of speckle interferometry and more accurately detect the positions of binary star systems. Implemented new affordable tech that will enable more people to observe countless binary+ star systems.}
+        {Took charge of automating the hardware of a Meade 10`` telescope to streamline the process of speckle interferometry and more accurately detect the positions of binary star systems. Implemented new affordable tech that will enable more people to observe countless binary$+$ star systems.}
       \resumeItemListEnd
 
     \resumeSubheading
