--- a/kyle_hovey_resume.tex
+++ b/kyle_hovey_resume.tex
@@ -87,7 +87,7 @@
   \resumeSubHeadingListStart
     \resumeSubheading
       {Utah State University}{Logan, UT}
-      {Computational Mathematics Major;  GPA:  3.87}{Aug. 2015 -- Current}
+      {Computational Mathematics Major;  GPA:  3.87}{Aug. 2015 -- Current (Graduating Fall 2018)}
     \resumeSubheading
       {Cuesta College}{San Luis Obispo, CA}
       {Three semesters to transfer;  GPA: 3.95}{Jan. 2014 -- May. 2015}
@@ -99,17 +99,23 @@
   \resumeSubHeadingListStart
 
     \resumeSubheading
+      {Atomic Jolt}{Logan, UT}
+      {Software Developer}{June 2018 - Present}
+      \resumeItemListStart
+      \resumeItem{Learnosity Connector}
+      {Contributed to the Learnosity Connector project which enables teachers to author course content in Canvas via the popular Learnosity service.}
+      \resumeItemListEnd
+
+    \resumeSubheading
       {USU Power Electronics Laboratory}{Logan, UT}
-      {Software Engineer / Research Assistant}{Jan 2016 - Present}
+      {Software Engineer / Research Assistant}{Jan 2016 - Jun 2018}
       \resumeItemListStart
         \resumeItem{Square One - Altium Library Management System}
-        {Created a system using Node$+$Express for mass-submitting tickets for new parts to be added to our in-house Altium Database and verified by librarians. This system integrates with OctoPart and supports auto-filling of data and will support automated price-minimizing order-form generation.}
+        {Created a system using Node$+$Express for mass-submitting tickets for new parts to be added to our in-house Altium Database and verified by librarians.}
         \resumeItem{CAN Data Graphing Utility}
         {Created an HTML5 asynchronous web-app for generating and sharing graphs of terabytes of data accrued in the AMPED battery life extension project.}
       \resumeItem{Graphic Design}
         {Designed all the banners and window decals around our facilities in Logan, UT. Utilized a unified color palette for all the facets of our organization.}
-      \resumeItem{Web Development}
-        {Created the first revision of the SELECT website, which utilized a responsive single-page design and aesthetic harmony of data presented therein.}
       \resumeItemListEnd
 
     \resumeSubheading
@@ -125,7 +131,7 @@
       {Head of Mechatronics}{Jun 2014 - Jan 2015}
       \resumeItemListStart
         \resumeItem{Telescope Automation}
-        {Took charge of automating the hardware of a Meade 10`` telescope to streamline the process of speckle interferometry and more accurately detect the positions of binary star systems. Implemented new affordable tech that will enable more people to observe countless binary$+$ star systems.}
+        {Took charge of automating the hardware of a Meade 10`` telescope to more accurately detect the positions of binary star systems.}
       \resumeItemListEnd
 
     \resumeSubheading
@@ -141,10 +147,12 @@
 %-----------ACHIEVEMENTS-----------------
 \section{Achievements}
   \resumeSubHeadingListStart
-  \resumeSubItem{USU Hackathon (2016)}
-    {Took first place at the Utah State University intercollegiate hackathon for my solo development work on a procedurally generated terrain-based music visualizer entitled ``Acoustic Forest''.}
+    \resumeSubItem{USU Hackathon (2017)}
+    {Took first place again at the Utah State University intercollegiate hackathon as a member of a team that created a Shakespearean Sonnet generator using natural language processing.}
     \resumeSubItem{USU Deans List (2017)}
     {Current member of the Dean's List at Utah State University.}
+    \resumeSubItem{USU Hackathon (2016)}
+    {Took first place at the Utah State University intercollegiate hackathon for my solo development work on a procedurally generated terrain-based music visualizer entitled ``Acoustic Forest''.}
     \resumeSubItem{Cuesta College FBSA (2015)}
     {Awarded the Frank Brown Science Award for outstanding academic achievement.}
   \resumeSubHeadingListEnd
