Updated resume post-grad

--- a/kyle_hovey_resume.tex
+++ b/kyle_hovey_resume.tex
@@ -87,7 +87,7 @@
   \resumeSubHeadingListStart
     \resumeSubheading
       {Utah State University}{Logan, UT}
-      {Computational Mathematics Major;  GPA:  3.87}{Aug. 2015 -- Current (Graduating Fall 2018)}
+      {Computational Mathematics (BS);  GPA:  3.88}{Aug. 2015 -- Dec 2018}
     \resumeSubheading
       {Cuesta College}{San Luis Obispo, CA}
       {Three semesters to transfer;  GPA: 3.95}{Jan. 2014 -- May. 2015}
@@ -100,7 +100,7 @@
 
     \resumeSubheading
       {Atomic Jolt}{Logan, UT}
-      {Software Developer}{June 2018 - Present}
+      {Software Engineer}{June 2018 - Present}
       \resumeItemListStart
       \resumeItem{Learnosity Connector}
       {Contributed to the Learnosity Connector project which enables teachers to author course content in Canvas via the popular Learnosity service.}
@@ -147,12 +147,10 @@
 %-----------ACHIEVEMENTS-----------------
 \section{Achievements}
   \resumeSubHeadingListStart
-    \resumeSubItem{USU Hackathon (2017)}
-    {Took first place again at the Utah State University intercollegiate hackathon as a member of a team that created a Shakespearean Sonnet generator using natural language processing.}
-    \resumeSubItem{USU Deans List (2017)}
-    {Current member of the Dean's List at Utah State University.}
-    \resumeSubItem{USU Hackathon (2016)}
-    {Took first place at the Utah State University intercollegiate hackathon for my solo development work on a procedurally generated terrain-based music visualizer entitled ``Acoustic Forest''.}
+    \resumeSubItem{USU - Magna Cum Laude}
+    {Graduated Magna Cum Laude in the Computaional Mathematics program at USU}
+    \resumeSubItem{USU Hackathon (2018)}
+    {Took first place for the third time in a row at the Utah State University intercollegiate hackathon for a Neural Network that can read D'ni numbers.}
     \resumeSubItem{Cuesta College FBSA (2015)}
     {Awarded the Frank Brown Science Award for outstanding academic achievement.}
   \resumeSubHeadingListEnd
@@ -174,9 +172,10 @@
 \section{Programming Skills}
   \resumeSubHeadingListStart
     \item{
-        \textbf{Languages}{: JS, C++, Python, Bash, Java, PHP, Haskell, LaTeX}
-      \hfill
-        \textbf{Technologies}{: Node.js, Express, jQuery, Babel}
+      \textbf{Languages}{: JS, C++, Python, Bash, Java, PHP, Haskell, LaTeX}
+    }
+    \item{
+      \textbf{Technologies}{: React, GraphQL, Node.js, Express, Tensorflow, Numpy }
     }
   \resumeSubHeadingListEnd
 
