--- a/kyle_hovey_resume.tex
+++ b/kyle_hovey_resume.tex
@@ -148,7 +148,7 @@
 \section{Achievements}
   \resumeSubHeadingListStart
     \resumeSubItem{USU - Magna Cum Laude}
-    {Graduated Magna Cum Laude in the Computaional Mathematics program at USU}
+    {Graduated Magna Cum Laude in the Computational Mathematics program at USU}
     \resumeSubItem{USU Hackathon (2018)}
     {Took first place for the third time in a row at the Utah State University intercollegiate hackathon for a Neural Network that can read D'ni numbers.}
     \resumeSubItem{Cuesta College FBSA (2015)}
