--- a/kyle_hovey_resume.tex
+++ b/kyle_hovey_resume.tex
@@ -5,7 +5,7 @@
 % License : MIT
 %------------------------
 
-\documentclass[letterpaper,11pt]{article}
+\documentclass[letterpaper,8pt]{article}
 
 \renewcommand{\familydefault}{\sfdefault}
 
@@ -104,6 +104,10 @@
       \resumeItemListStart
       \resumeItem{Learnosity Connector}
       {Contributed to the Learnosity Connector project which enables teachers to author course content in Canvas via the popular Learnosity service.}
+      \resumeItem{Socialize}
+      {Developed new elements of Atomic Jolt's Socialize platform for polls and discussions between students.}
+      \resumeItem{Atomic Insight}
+      {Led a project using Go and React that uses LTI advantage to deliver metrics into Canvas Courses.}
       \resumeItemListEnd
 
     \resumeSubheading
@@ -160,11 +164,13 @@
 \section{Projects}
   \resumeSubHeadingListStart
     \resumeSubItem{8 Bit Spaghetti}
-      {Designed and built 8-bit processor using TTL. Helped many students around the world build versions of the design.}
+    {Designed and built 8-bit processor using TTL. Helped many students around the world build versions of the design.}
     \resumeSubItem{Dream Cloak LED Display}
-      {Designed and built a 15x30 24-bit wearable RGB LED display and a web app to control it wirelessly, all in five days.}
-    \resumeSubItem{Euler Golf}
-      {Created an HTML5 game based on a problem conceived involving recursive movement over the Gaussian Integers.}
+    {Designed and built a 15x30 24-bit wearable RGB LED display and a web app to control it wirelessly, all in five days.}
+    \resumeSubItem{Automata Research}
+    {Developed novel approach to classifying all Life-Like Cellular Automata by a similarity metric.}
+    \resumeSubItem{Health Research}
+    {Designed and built personal health analysis applications (ECG/Apple Health) for insight and knowledge into their own health.}
   \resumeSubHeadingListEnd
 
 
@@ -172,10 +178,13 @@
 \section{Programming Skills}
   \resumeSubHeadingListStart
     \item{
-      \textbf{Languages}{: JS, C++, Python, Bash, Java, PHP, Haskell, LaTeX}
+      \textbf{Languages}{: TypeScript, JS (es10), C, C++, CSS3 Python, Julia, Go, Swift, SQL, Haskell, LISP, Bash, LaTeX}
     }
     \item{
-      \textbf{Technologies}{: React, GraphQL, Node.js, Express, Tensorflow, Numpy }
+      \textbf{Technologies}{: React, GraphQL, Node.js, Express, Tensorflow, Numpy, Postgresql, WebSocket}
+    }
+    \item{
+      \textbf{Operating Systems}{: MacOS, Arch, Ubuntu/Debian, CentOS, Windows}
     }
   \resumeSubHeadingListEnd
 
