--- a/kyle_hovey_resume.tex
+++ b/kyle_hovey_resume.tex
@@ -106,8 +106,10 @@
       {Contributed to the Learnosity Connector project which enables teachers to author course content in Canvas via the popular Learnosity service.}
       \resumeItem{Socialize}
       {Developed new elements of Atomic Jolt's Socialize platform for polls and discussions between students.}
+      \resumeItem{Waymaker}
+      {Collaborated with Lumen Learning on the Waymaker project and developed educational workflow software}
       \resumeItem{Atomic Insight}
-      {Led a project using Go and React that uses LTI advantage to deliver metrics into Canvas Courses.}
+      {Led the Insight project to replace Canvas Analytics with a novel LTI stack written in Go+React to deliver customized metrics into Canvas Courses}
       \resumeItemListEnd
 
     \resumeSubheading
@@ -117,17 +119,17 @@
         \resumeItem{Square One - Altium Library Management System}
         {Created a system using Node$+$Express for mass-submitting tickets for new parts to be added to our in-house Altium Database and verified by librarians.}
         \resumeItem{CAN Data Graphing Utility}
-        {Created an HTML5 asynchronous web-app for generating and sharing graphs of terabytes of data accrued in the AMPED battery life extension project.}
+        {Created a application for generating and sharing graphs of terabytes of data accrued in the AMPED battery life extension project.}
       \resumeItem{Graphic Design}
         {Designed all the banners and window decals around our facilities in Logan, UT. Utilized a unified color palette for all the facets of our organization.}
       \resumeItemListEnd
 
     \resumeSubheading
       {USU GASLab}{Logan, UT}
-      {Volunteer Software Engineer}{Apr 2017 - Present}
+      {Volunteer Software Engineer}{Apr 2017 - Dec 2018}
       \resumeItemListStart
       \resumeItem{Cubium Software Project}
-      {A volunteer of the Get-Away-Special small-satellite program at Utah State University. Develops open source subscription-based plug and play software for small satellite application as well as new hardware that will empower individuals to deploy experiments on a budget.}
+      {A volunteer of the Get-Away-Special small-satellite program at Utah State University. Developed open source subscription-based plug and play software for small satellite application as well as new hardware that will empower individuals to deploy experiments on a budget.}
       \resumeItemListEnd
 
     \resumeSubheading
@@ -153,8 +155,8 @@
   \resumeSubHeadingListStart
     \resumeSubItem{USU - Magna Cum Laude}
     {Graduated Magna Cum Laude in the Computational Mathematics program at USU}
-    \resumeSubItem{USU Hackathon (2018)}
-    {Took first place for the third time in a row at the Utah State University intercollegiate hackathon for a Neural Network that can read D'ni numbers.}
+    \resumeSubItem{USU Hackathon (2016-2018)}
+    {Took first place three years in a row at the Utah State University intercollegiate hackathon}
     \resumeSubItem{Cuesta College FBSA (2015)}
     {Awarded the Frank Brown Science Award for outstanding academic achievement.}
   \resumeSubHeadingListEnd
@@ -178,10 +180,10 @@
 \section{Programming Skills}
   \resumeSubHeadingListStart
     \item{
-      \textbf{Languages}{: TypeScript, JS (es10), C, C++, CSS3 Python, Julia, Go, Swift, SQL, Haskell, LISP, Bash, LaTeX}
+      \textbf{Languages}{: TypeScript, JS (es10), CSS3, Python, C, C++, Ruby, Julia, Go, Swift, SQL, Haskell, LISP, Bash, LaTeX}
     }
     \item{
-      \textbf{Technologies}{: React, GraphQL, Node.js, Express, Tensorflow, Numpy, Postgresql, WebSocket}
+      \textbf{Technologies}{: React, GraphQL, Node.js, Rails, Express, Tensorflow, Numpy, Postgresql, WebSocket}
     }
     \item{
       \textbf{Operating Systems}{: MacOS, Arch, Ubuntu/Debian, CentOS, Windows}
